	* Bug fix: incorrect CTL code crashes the CTL іnterpereter
	  (Florian Kainz)
	* Bug fix: initializing an element of a static CTL array with
	  FLT_MIN or FLT_MAX throws a C++ exception (Florian Kainz)

Version 1.4.1:
	* Fixed build problem on Windows: build failed to create the
	  IlmCtlSimd/halfExpLogTable.h header file.
	  (Eric Wimmer)
	* Removed Windows .suo files from distribution.
	  (Eric Wimmer)

Version 1.4.0:
	* Bumped DSO version number to 2.0
	  (Florian Kainz)
	* Bug fix: multi-threaded execution of CTL programs caused
	  segmentation faults and bad_alloc exceptions
	  (Florian Kainz)
	* Added new functions to the standard library:
	    3x3 matrix multiplication, addition and inversion
	    3x3 and 4x4 matrix transposition
	    1D lookup table with explicit x,y pairs and linear interpolation
	    1D lookup table with explicit x,y pairs and cubic interpolation
	    1D lookup table with regularly-spaced entries and cubic
	    interpolation
	  (Florian Kainz)
	* Added new ctlversion statement (Florian Kainz)

Version 1.2.1:
	Installation Tuning
        * corrected version number on dso's  - now 1.0
	* Separated package's LDFLAGS and LIBS flags so that test programs
	can link with static libraries properly
	* eliminated some warning messages during install
	(Andrew Kunz)

Version 1.2.0:
	* Reorganized libraries for general release
	* Bug fix: parsing of expressions with commas is stricter
	  (Andrew Kunz)
	* New build scripts for Linux/Unix
	  (Andrew Kunz)
	* New Windows project files and build scripts
	  (Kimball Thurston)

Version 1.1.0:
	* Bug fix: Scattered-data interpolation did not interpolate
	  smoothly between the given data points.
	* Bug fix: file IlmCtlSimd/CtlSimdReg.cpp did not compile on Windows.

Version 1.0.2:
	* Bug fix: FunctionArg::setDefaultValue() had unexpected side-effects.
	* Bug fix: log_h(+infinity) returned NaN instead of +infinity
	* Some operations on varying operands are faster.
	* Added new built-in functions: